# ledgr

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  docker-compose.yml  guide.md
.claude/: settings.local.json
.claude/commands/: backend-api.md  fix.md  (+4 more)
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql  002_seed_preset_cards.sql  003_merchant_normalized.sql  004_budgets.sql  005_import_id.sql
backend/scripts/: setup_test_db.sh
backend/src/: config.rs  db.rs  main.rs
backend/src/models/: analytics.rs  budget.rs  card.rs  config.rs  import.rs  mod.rs  transaction.rs
backend/src/routes/: budget.rs  cards.rs  config.rs  import.rs  mod.rs  transactions.rs
backend/src/services/: csv_parser.rs  dedup.rs  merchant_normalizer.rs  mod.rs
backend/tests/: analytics_tests.rs  crud_tests.rs  stats_tests.rs
backend/tests/common/: mod.rs
docs/: analytics-features.md  architecture.md  features.md  security.md  setup.md  style-guide.md
frontend/: package-lock.json  package.json
prompts/: 01-scaffold.md  02-backend-foundation.md  03-backend-api.md  04-frontend-foundation.md  04_01-zen-design-refresh.md  04_02-layout-explorations.md  04_03-meridian-layout.md  04_04-full-redesign.md  05-import-page.md  06-dashboard.md  07-transactions.md  08-analytics.md  08_01-remaining-frontend.md  09-enhanced-analytics-backend.md  09_01-backend-tests.md  10-enhanced-dashboard.md  11-insights-forecasting-habits.md  12-budget-tracking.md  13-platform-improvements.md  13_01-ui-polish-improvements.md
tests/: test_amex.csv  test_capone.csv  test_citi.csv
(+55 files in other folders)
